fix dials not getting z-index boosted when active

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -138,10 +138,6 @@ body {
 
 $dial-1-width: 6vmin;
 
-.dial.active {
-  z-index: 1000;
-}
-
 .dial-1 {
   width: 30vmin;
   height: 8vmin;
